[backport] Remove partial heuristics from regular testing